--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.12.11",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
     "eslint-webpack-plugin": "^2.4.3",
@@ -33,9 +34,13 @@
     "sass-loader": "^10.1.1",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dashboard": "^3.3.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2"
   }
 }
