--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack --mode development",
     "start": "webpack serve --open 'Chrome'",
     "lint": "eslint --max-warnings=0 .",
-    "deploy": "git subtree push --prefix subfolder-name-here origin gh-pages"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
