--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "webpack --mode development",
     "start": "webpack serve --open 'Chrome'",
     "lint": "eslint --max-warnings=0 .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "webpack build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
     "eslint-webpack-plugin": "^2.4.3",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
